k8s/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noun-hrms-ingress
spec:
  rules:
    - host: hrms-staging.noun.edu.ng
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: noun-backend-service
                port:
                  number: 80
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: noun-backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: noun-frontend-service
                port:
                  number: 80
